# atpy-cpp

./: CMakeLists.txt  readme.md  setup.py
atpy/: __init__.py  config.ini
atpy/core/: __init__.py  beamline.pxd  beamline.pyx  elements.pxd  elements.pyx  utils.pxd  utils.pyx
atpy/core/interface/: __init__.py  constants.cpp  constants.pxd  constants.pyx  cppast.pxd  cppbeamline.pxd  cppcomponent.pxd  cppelements.pxd  cppoptimization.pxd  cppstructures.pxd  test_wrao.py
atpy/core/parser/: __init__.py  lexer.cpp  lexer.pxd  lexer.pyx  parser.cpp  parser.pxd  parser.pyx
atpy/core/physics/Eigen/src/Core/products/: GeneralBlockPanelKernel.h
atpy/core/physics/beamline/: CMakeLists.txt  Makefile  cppbeamline.backup  cppbeamline.cpp  cppbeamline.h  cppcomponent.cpp  cppcomponent.h  cppdrivingterms.cpp  cppdrivingterms.h  cppdrivingterms2.cpp  cppdrivingterms3.cpp  cpptrackdata.h  twiss.cpp  twiss.h  twiss.jl
atpy/core/physics/elements/: CMakeLists.txt  Makefile  cppcombination24.h  cppdipole.cpp  cppdipole.h  cppdrift.cpp  cppdrift.h  cppelement.cpp  cppelement.h  cppelement.h~~  cppelementfactory.h  cppmarker.cpp  cppmarker.h  cppoctupole.cpp  cppoctupole.h  cppquadrupole.cpp  cppquadrupole.h  cppradiationintegrals.cpp  cppradiationintegrals.h  cppsextupole.cpp  cppsextupole.h  cpptuning.cpp  cpptuning.h
atpy/core/physics/utils/: cppast.h  cppconstants.h  cppoptimization.h  cppstructures.h  matrix.h
atpy/graphics/: __init__.py  data.py  data2.py  graphtest.py  layout.py  opticsplot.py  test_of_Layout.py  tools.py
atpy/optimize/: __init__.py  match.py  optimize.py  problems.py
atpy/test/: STCF_TEST_CHROM2_03_08_18_39_0001.py  test_beamline.py  test_elements.py  test_hoaarc.py
atpy/tools/: __init__.py  translate.py
atpy/utils/: __init__.py  report.py
user_manual/: ATPY_User_Manual.ipynb
